--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -9,6 +9,11 @@ a {
   text-decoration: none;
 }
 
+.App {
+  // min-height: 100vh;
+  // background-color: purple;
+}
+
 .home {
   padding: 60px 0;
   display: flex;
@@ -16,6 +21,48 @@ a {
   gap: 60px;
 }
 
-.products {
+.products,
+.product-details,
+.cart {
   padding: 60px 0;
+}
+
+.product-details {
+  min-height: calc(100vh - 64px);
+  display: flex;
+  align-items: center;
+  // background-color: pink;
+}
+
+.card-text {
+  margin-bottom: 32px;
+}
+
+.size-n-price {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.no-size {
+  position: absolute;
+  width: max-content;
+  bottom: -24px;
+  color: red;
+}
+
+.cart-content {
+  display: flex;
+  justify-content: space-between;
+  gap: 24px;
+}
+
+.cart-item-first-line {
+  display: flex;
+  justify-content: space-between;
+}
+
+.quantity {
+  display: flex;
+  align-items: center;
 }
