--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -10,7 +10,10 @@ a {
 }
 
 .App {
-  // min-height: 100vh;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   // background-color: purple;
 }
 
