fix some layout + style + filter btns

--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -13,8 +13,6 @@ a {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  // background-color: purple;
 }
 
 .home {
@@ -41,7 +39,6 @@ a {
   min-height: calc(100vh - 64px);
   display: flex;
   align-items: center;
-  // background-color: pink;
 }
 
 .card-text {
@@ -76,4 +73,8 @@ a {
 .quantity {
   display: flex;
   align-items: center;
+}
+
+footer {
+  margin-top: auto;
 }
