--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -39,13 +39,23 @@ a {
     }
   }
 
-  .home-sub-hero {
+  .home-sub-hero,
+  .home-secondary-text {
     margin-bottom: 60px;
   }
 }
 
 .categories {
   margin-bottom: 60px;
+
+  &-card {
+    position: relative;
+    width: 50%;
+
+    img {
+      width: 100%;
+    }
+  }
 }
 
 .products,
