--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -75,6 +75,10 @@ a {
 .cart,
 .favourites {
   padding: 60px 0 120px;
+
+  @media (max-width: 900px) {
+    padding: 30px 0 60px;
+  }
 }
 
 .product-card-bottom {
@@ -114,9 +118,18 @@ a {
   align-items: flex-start;
   gap: 24px;
 
+  @media (max-width: 900px) {
+    flex-direction: column;
+    align-items: center;
+  }
+
   .cart-item-first-line {
     display: flex;
     justify-content: space-between;
+
+    @media (max-width: 960px) {
+      flex-direction: column;
+    }
   }
 
   .quantity {
